@@ -194,7 +194,8 @@ public:
 
 	// Add object.
 	virtual int add(Game_object *obj, int mx = -1, int my = -1, 
-			int sx = -1, int sy = -1, bool dont_check = false);
+			int sx = -1, int sy = -1, bool dont_check = false,
+						bool combine = false);
 
 	// Paint it and its contents.
 	virtual void paint(Game_window *gwin);
